# relativist

./: .claudeignore  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENCE  LICENSE  NOTICE  README.md  SECURITY.md  USAGE_GUIDE.md  docker-compose.yml  prompt.txt  rust-toolchain.toml
.claude/agents/: README.md  code-cleaner.md  code-reviewer.md  doc-catalog.md  especialista-specs.md  implementer.md  pesquisador.md  planner.md  qa.md  researcher.md  sdd-pipeline.md  task-splitter.md
.claude/open-source-readiness/: badges-draft.yaml  composition.yaml  manifest.md
.claude/rpi-pipeline/: badges-draft.yaml  manifest.md  (+1 more)
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: DATA-COLLECTION-PLAN.md  DEFERRED-WORK.md  DEVELOPMENT-PIPELINE.md  DOCKER.md  GIT-WORKFLOW.md  INDEX.md  MAINTAINER-GITHUB-SETUP.md  PHASE1-FINDINGS.md  PHASE2-FINDINGS.md  README.md  ROADMAP.md  SPEC-REVIEW-PIPELINE.md  TESTING.md  V1-LOCAL-BASELINE-ANALYSIS.md  V2-FEATURE-MATRIX.md  next-steps.md  pipeline-state.md  progress.md  roadmap.md  theory-bridge.md
relativist-cli/: Cargo.toml
relativist-cli/src/: main.rs
relativist-core/: Cargo.toml
relativist-core/benches/: benchmarks.rs
relativist-core/proptest-regressions/encoding/: biguint_readback.txt  horner.txt
relativist-core/src/: commands.rs  config.rs  coordinator.rs  error.rs  lib.rs  worker.rs
relativist-core/src/bench/: csv.rs  isomorphism.rs  memory.rs  memory_probe.rs  mod.rs  stop_rule.rs  streaming.rs  suite.rs  validate.rs
relativist-core/src/bench/benchmarks/: church_add.rs  church_mul.rs  church_sum_of_squares.rs  dual_tree.rs  ep_annihilation.rs  erasure_propagation.rs  mod.rs  tree_sum.rs
relativist-core/src/encoding/: arithmetic.rs  biguint_readback.rs  church.rs  codec_church.rs  codec_lambda.rs  horner.rs  horner_oracle.rs  mod.rs  recipe.rs  registry.rs  traits.rs
relativist-core/src/io/: binary.rs  generators.rs  mod.rs  text_dsl.rs
relativist-core/src/merge/: border_graph.rs  border_resolver.rs  core.rs  grid.rs  grid_delta_integration_tests.rs  helpers.rs  mod.rs  types.rs
relativist-core/src/merge/internal/: mod.rs  pure_core_guard.rs
relativist-core/src/net/: core.rs  debug.rs  mod.rs  sparse.rs  types.rs
relativist-core/src/observability/: tracing_init.rs
relativist-core/src/partition/: compact.rs  departure_recovery.rs  helpers.rs  mod.rs  remap.rs  split.rs  strategy.rs  streaming.rs  types.rs
relativist-core/src/protocol/: bincode_v2.rs  channel.rs  compression.rs  config.rs  coordinator.rs  delta_wire_tests.rs  error.rs  frame.rs  mod.rs  retained.rs  self_worker.rs  tcp.rs  timers.rs  transport.rs  types.rs  unix.rs  worker.rs  zero_copy_tests.rs
relativist-core/src/reduction/: engine.rs  mod.rs  rules.rs
relativist-core/src/security/: mod.rs  tls.rs  token.rs
relativist-core/tests/: bench_cli_tier3_flags.rs  bench_suite_config_serde.rs  biguint_readback_independence.rs  cli_integration.rs  compute_encode_only.rs  compute_output_writes_reduced_net.rs  d011_partition_perf_witness.rs  d012_compute_time_witness.rs  d012_mips_witness.rs  d012_network_time_witness.rs  d014_csv_schema_roundtrip.rs  d014_end_to_end_smoke.rs  d014_memory_probe_oracle.rs  d014_plot_smoke.rs  d014_resume_invariant.rs  d014_smoke_data_integrity.rs  d014_stop_rule_oom.rs  d014_stop_rule_ram.rs  d014_stop_rule_wall.rs  d014_stress_curve_descriptor.rs  d014_stress_curve_smoke.rs  d014_writer_to_plot_roundtrip.rs  decode_subcommand.rs  docs_docker_md_present.rs  elastic_phase_d_option_a.rs  elastic_phase_e_qa_regressions.rs  horner_codec_cli_roundtrip.rs  horner_distributed_g1.rs  horner_encode_decode_roundtrip.rs  horner_encoder_constants.rs  horner_oracle_constants.rs  horner_pipeline_property.proptest-regressions  horner_pipeline_property.rs  integration_horner_centralized.rs  integration_tcp_bench_smoke.rs  net_union.rs  partition_amendments.rs  spec09_bench_construction_memory_probe.rs  spec09_bench_eager_path_regression.rs  spec09_bench_streaming_path.proptest-regressions  (+16 more)
relativist-core/tests/common/: d014_helpers.rs  mod.rs
reproduce_article/: README.md
results/: arithmetic_detail.csv  arithmetic_rounds.csv  arithmetic_summary.csv  databound_treesum_rounds.csv  expanded_dualtree_local_detail.csv  expanded_dualtree_local_rounds.csv  expanded_ep_con_local_rounds.csv  horner_demo_2026-05-16.csv  phase2_detail.csv  phase2_rounds.csv  phase2_summary.csv  profile_a_ep_dup_detail.csv  profile_a_ep_dup_rounds.csv  profile_a_ep_era_detail.csv  profile_a_ep_era_summary.csv  profile_b_condup_rounds.csv  profile_b_mixed_rounds.csv  profile_b_mixed_summary.csv  profile_c_dualtree_detail.csv  summary.csv  v2_local_full_detail.csv  v2_local_full_rounds.csv  v2_local_full_summary.csv
scripts/: bench_docker.sh  bench_docker_l6fix.sh  bench_docker_resume.sh  bench_docker_resume2.sh  bench_docker_v2.sh  bench_phase1_locked.sh  bench_phase1_stress_locked.sh  bench_phase2_locked.sh  bench_phase2_stress_locked.sh  bench_phase3_lan.sh  horner_demo.sh  horner_distributed_demo.sh  horner_live_demo.sh  install.sh  plot_stress_curve.py  reproduce_local_baseline.sh  stress_curve.sh
specs/: SPEC-00-glossary.md  SPEC-01-invariantes.md  SPEC-02-net-representation.md  SPEC-03-reduction.md  SPEC-04-partition.md  SPEC-05-merge.md  SPEC-06-wire-protocol.md  SPEC-07-deployment.md  SPEC-08-test-strategy.md  SPEC-09-benchmarks.md  SPEC-10-security.md  SPEC-11-observability.md  SPEC-12-user-io.md  SPEC-13-system-architecture.md  SPEC-14-encoding.md  SPEC-15-distribution.md  SPEC-18-wire-format-v2.md  SPEC-19-delta-protocol.md  SPEC-20-elastic-grid.md  SPEC-21-streaming-generation.md  SPEC-22-arena-management.md  SPEC-24-wan-deployment.md  SPEC-27-encoder-decoder-api.md
src/: commands.rs  config.rs  coordinator.rs  error.rs  io.rs  lib.rs  main.rs  merge.rs  net.rs  observability.rs  partition.rs  protocol.rs  reduction.rs  security.rs  worker.rs
tests/: cli_integration.rs
(+2962 files in other folders)
