[package]
name = "relativist-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed reduction of Interaction Combinators on Grid Computing — core library"
readme = "../README.md"
keywords = ["interaction-combinators", "grid-computing", "distributed", "reduction"]
categories = ["science", "concurrency"]

[lib]
name = "relativist_core"
path = "src/lib.rs"

[dependencies]
# Serialization (SPEC-02 R24, SPEC-06 R11, SPEC-13 R11)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }

# CLI (SPEC-07 R2, SPEC-13 R11)
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Error handling (PESQ-023 D2, SPEC-13 R11)
thiserror = "2"

# Observability (PESQ-023 D5, SPEC-13 R11)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# Async runtime (SPEC-06, SPEC-13 R11)
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time", "signal"] }

# Checksum (SPEC-06 R10)
crc32fast = "1"

# Frame compression (SPEC-18 R9-R13, item 2.23 §3.3)
lz4_flex = { version = "0.11", default-features = false, features = ["std", "safe-encode", "safe-decode"] }

# Async utilities (SPEC-06 R21 — concurrent partition sends)
futures = "0.3"

# Async trait object safety (SPEC-17 R4 — Transport trait requires dyn dispatch)
async-trait = "0.1"

# Socket tuning (SPEC-17 R21 — TCP keepalive, buffer sizes via SockRef)
socket2 = "0.5"

# Local parallelism (SPEC-07 R20 — rayon for fair comparison)
rayon = "1"

# Random number generation (SPEC-13 R11, SPEC-10 R9)
rand = "0.8"

# Security: token base64 encoding (SPEC-10 R10)
base64 = "0.22"

# Security: constant-time comparison (SPEC-10 R15)
subtle = "2"

# TLS (SPEC-10 — optional, SPEC-13 R12/R37)
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

# Metrics (SPEC-11 — optional, SPEC-13 R12/R37)
prometheus-client = { version = "0.23", optional = true }
axum = { version = "0.8", optional = true }

# OpenTelemetry (SPEC-11 — optional, SPEC-13 R12/R37)
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", optional = true }

# Zero-copy archive (SPEC-18 §3.5 R20-R27, item 2.24 — optional, opt-in)
# `bytecheck` enables the safe `rkyv::access` validating API (R24 step 3 mandates it).
# `alloc` enables `rkyv::util::AlignedVec` (R25 — 16-byte aligned receive buffer).
# `std` is required for the validation infrastructure to work with std types.
rkyv = { version = "0.8", optional = true, default-features = false, features = ["bytecheck", "alloc", "std"] }

[dev-dependencies]
# Property-based testing (PESQ-023 D6, SPEC-13 R13)
proptest = "1"

# Benchmarking (SPEC-13 R13)
criterion = { version = "0.5", features = ["html_reports"] }

# Async test utilities (SPEC-13 R13)
tokio-test = "0.4"

# HTTP testing (SPEC-11 R21 — metrics endpoint tests)
tower = "0.5"

[features]
default = []
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]
metrics = ["dep:prometheus-client", "dep:axum"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk"]
full = ["tls", "metrics", "otel"]
# SPEC-18 R20: `zero-copy` MUST NOT be a default feature; `full` MUST NOT include it.
# Opt-in via `cargo build --features zero-copy`. See SPEC-18 §3.5 (item 2.24).
zero-copy = ["dep:rkyv"]

[[bench]]
name = "benchmarks"
harness = false
